fix: logged in name mobile visibilkity fix

--- a/components/user-icon/styles/medium.scss
+++ b/components/user-icon/styles/medium.scss
@@ -11,6 +11,7 @@
 	}
 
 	.user-icon-login-cue {
+		display: inline;
 		font-weight: lighter;
 		font-size: toRem(24);
 	}
