--- a/components/user-icon/styles/root.scss
+++ b/components/user-icon/styles/root.scss
@@ -20,7 +20,6 @@
 		border-radius: toRem(32);
 	}
 	.user-icon-login-cue {
-		font-weight: lighter;
-		font-size: toRem(24);
+		display: none;
 	}
 }
